test/files/neg/t5687.check
t5687.scala:20: error: overriding type Repr in class Template with bounds[T <: AnyRef] <: Template[T];
 type Repr has incompatible type
  type Repr = CurveTemplate[T]
       ^
one error found
